fixed UI and bug with image picker in split screen

--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -425,6 +425,6 @@
         <image name="settingIcon" width="500" height="500"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9dc-PF-T9Z"/>
+        <segue reference="cSm-hL-He6"/>
     </inferredMetricsTieBreakers>
 </document>
