--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad10_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W6W-t1-EU9">
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W6W-t1-EU9">
                                 <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
                                 <wkWebViewConfiguration key="configuration">
@@ -35,17 +34,6 @@
                                 <state key="normal" title="Menu" image="settingIcon"/>
                                 <connections>
                                     <action selector="menuButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tyP-p4-GJi"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJi-QY-FVQ">
-                                <rect key="frame" x="20" y="20" width="115" height="103"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="11"/>
-                                <state key="normal" title="Search" backgroundImage="googleIcon">
-                                    <color key="titleColor" white="1" alpha="0.0" colorSpace="deviceWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="webPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W17-ic-jBv"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYP-w5-IYr">
@@ -63,11 +51,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="W6W-t1-EU9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RsK-db-wME"/>
+                            <constraint firstItem="W6W-t1-EU9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YXj-Ie-EfJ"/>
+                            <constraint firstItem="W6W-t1-EU9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="hTA-vB-Cf5"/>
+                            <constraint firstAttribute="trailing" secondItem="W6W-t1-EU9" secondAttribute="trailing" id="ycJ-Ei-Pc9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="menuButton" destination="Cqk-MT-Spc" id="Hop-QR-mxm"/>
-                        <outlet property="webButton" destination="fJi-QY-FVQ" id="S1D-6T-Zmg"/>
                         <outlet property="webViewTest" destination="W6W-t1-EU9" id="pJI-KZ-Rn8"/>
                         <segue destination="zH7-w1-LQj" kind="show" identifier="vcToMenu" id="z14-VN-9nl"/>
                     </connections>
@@ -422,7 +415,6 @@
     </scenes>
     <resources>
         <image name="cameraIcon" width="500" height="500"/>
-        <image name="googleIcon" width="500" height="500"/>
         <image name="photoLibrary" width="500" height="500"/>
         <image name="returnIcon" width="50" height="50"/>
         <image name="settingIcon" width="500" height="500"/>
